# pokemon-emerald-tools-saves

./: readme.md
save-tool/: compile.sh  crc16_ccitt_table.hh  gift-tool.cc  meson.build  mmap.hh  pokemon-emerald-format.hh  pokemon-gen3-format.hh  pokemon-info.cc  pokemon-levelling.hh  save-tool.cc  util.hh
saves/after-catching-kyogre-groudon/: Pokemon - Emerald Version (USA, Europe).sav
saves/after-trade-evolve/: Pokemon - Emerald Version (USA, Europe).sav
saves/emerald/after-elite-four-before-latios-choice/: Pokemon - Emerald Version (USA, Europe).sav
saves/emerald/after-mystery-gift/: Pokemon - Emerald Version (USA, Europe).srm
saves/emerald/after-trade-evolve/: Pokemon - Emerald Version (USA, Europe).sav
saves/emerald/before-mystery-gift-backup/: Pokemon - Emerald Version (USA, Europe).srm
saves/emerald/testing-backup/: Pokemon - Emerald Version (USA, Europe).sav
saves/fire-red/after-mewtwo-suicune/: Pokemon - Fire Red Version (U) (V1.1).sav
saves/fire-red/after-most-common-unown/: Pokemon - Fire Red Version (U) (V1.1).srm
saves/fire-red/before-elite-four/: Pokemon - Fire Red Version (U) (V1.1).srm
saves/leaf-green/before-elite-four/: Pokemon - Leaf Green Version (U) (V1.1).srm
saves/platinum/before-elite-four/: Pokemon - Platinum Version (USA) (Rev 1).dsv
scripts/: lemuroid-to-mgba.sh  mgba-to-lemuroid.sh  self-trade.sh
tools/: build.sh  gift-tool.cc  pokemon-gen3-format.hh  pokemon-info.cc  pokemon-levelling.hh  pokemon-names.hh  pokemon-strings.hh  save-tool.cc  species-id-conversion.hh
